# flowsint-desktop

./: CHANGELOG.md  CONTRIBUTING.md  README.md  TAURI_PLUGINS.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.githooks/: post-commit  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: setup-hooks.mjs  setup-hooks.sh  updater.mjs
src/: ARCHITECTURE.md  index.css  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: docker-compose.desktop.yml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: docker.rs  mod.rs  setup.rs  system.rs
src/components/: Updater.tsx
src/composables/: index.ts  useDocker.ts  useLanguage.ts  useLocalStorage.ts  useNotification.ts  useTauri.ts  useTheme.ts  useUpdater.ts  useWindow.ts
src/constants/: index.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  fr.json
src/layouts/: RootLayout.tsx
src/pages/: About.tsx  Examples.tsx  Home.tsx  NotFound.tsx  Settings.tsx  Startup.tsx  Update.tsx
src/router/: index.tsx
src/types/: index.ts
src/utils/: format.ts  validation.ts
