[package]
name = "flowsint-desktop"
version = "0.1.0"
description = "Flowsint Desktop Launcher"
authors = ["you"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "flowsint_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
base64 = "0.21"
